[build-system]
requires = ["hatchling"] # list of packages needed to build your package
build-backend = "hatchling.build" # name of the python object that frontends use to perform the build

[project]
name = "fhirbuild"
version = "0.0.2"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "build fhir specimens or observations"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "dict_path",
  "pandas"
]
classifiers = [
  "Programming Language :: Python :: 3"
]

[project.scripts]
fhirbuild = "fhirbuild:__main__"