[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "fhirbuild"
version = "0.1.1"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "build fhir specimens or observations"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "dict_path",
  "pandas",
  "tram @ git+https://github.com/numlims/tram.git"
]
classifiers = [
  "Programming Language :: Python :: 3"
]

[project.scripts]
fhirbuild = "fhirbuild:__main__"

[tool.setuptools]
packages = ["fhirbuild"]